# ApprovalTests.cpp.StarterProject

./: CMakeLists.txt
code/: CMakeLists.txt  YourCodeGoesHere.cpp  YourCodeGoesHere.h
lib/: CMakeLists.txt
lib/ApprovalTests/: CMakeLists.txt
lib/Catch/: CMakeLists.txt
tests/: CMakeLists.txt  DemoTest.cpp  NewTest.cpp  main.cpp
